--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "mocha 'test/**/2.test.js'",
     "test1": "mocha 'test/**/async.app.spec.js' --timeout 50000",
     "test2": "mocha 'test/**/async.app.spec.js' -g 'async'",
     "test3": "mocha --reporter mochawesome --reporter-options reportDir=Report,reportFilename=Test_Report",
@@ -19,6 +20,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chai": "^4.3.4",
+    "lodash": "^4.17.21",
     "mocha": "^9.0.2",
     "mochawesome": "^6.2.2"
   }
