--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha 'test/**/2.test.js'",
+    "test": "mocha 'test/**/index.test.js'",
     "test1": "mocha 'test/**/async.app.spec.js' --timeout 50000",
     "test2": "mocha 'test/**/async.app.spec.js' -g 'async'",
     "test3": "mocha --reporter mochawesome --reporter-options reportDir=Report,reportFilename=Test_Report",
@@ -12,7 +12,9 @@
     "cmdline1": "mocha 'test/**/async.app.spec.js' -b",
     "cmdline2": "mocha 'test/**/async.app.spec.js' -R 'progress'",
     "cmdline3": "mocha 'test/**/async.app.spec.js' -R 'dot'",
-    "cmdline4": "mocha --parallel"
+    "cmdline4": "mocha --parallel",
+    "coverage": "istanbul cover _mocha index.test.js -x *.test.js",
+    "showcoverage": "open coverage/lcov-report/index.html"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +25,8 @@
     "lodash": "^4.17.21",
     "mocha": "^9.0.2",
     "mochawesome": "^6.2.2"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.5"
   }
 }
