--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha 'test/**/index.test.js'",
+    "testC": "mocha 'test/**/coffeeShop.test.js'",
     "test5": "mocha 'test/**/async.app.spec.js'",
     "test1": "mocha 'test/**/async.app.spec.js' --timeout 50000",
     "test2": "mocha 'test/**/async.app.spec.js' -g 'async'",
@@ -26,9 +27,11 @@
     "chai-as-promised": "^7.1.1",
     "lodash": "^4.17.21",
     "mocha": "^9.0.2",
-    "mochawesome": "^6.2.2"
+    "mochawesome": "^6.2.2",
+    "sinon": "^11.1.2"
   },
   "devDependencies": {
-    "istanbul": "^0.4.5"
+    "istanbul": "^0.4.5",
+    "proxyquire": "^2.1.3"
   }
 }
