--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha 'test/**/index.test.js'",
-    "testC": "mocha 'test/**/coffeeShop.test.js'",
+    "test0": "mocha 'test/**/index.test.js'",
+    "test": "mocha 'test/**/coffeeShop.test.js'",
     "test5": "mocha 'test/**/async.app.spec.js'",
     "test1": "mocha 'test/**/async.app.spec.js' --timeout 50000",
     "test2": "mocha 'test/**/async.app.spec.js' -g 'async'",
@@ -15,8 +15,9 @@
     "cmdline2": "mocha 'test/**/async.app.spec.js' -R 'progress'",
     "cmdline3": "mocha 'test/**/async.app.spec.js' -R 'dot'",
     "cmdline4": "mocha --parallel",
-    "coverage": "istanbul cover _mocha index.test.js -x *.test.js",
-    "showcoverage": "open coverage/lcov-report/index.html"
+    "coverage1": "istanbul cover _mocha index.test.js -x *.test.js",
+    "showcoverage": "open coverage/lcov-report/index.html",
+    "coverage": "nyc --reporter=html --reporter=lcov --reporter=text npm test"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "lodash": "^4.17.21",
     "mocha": "^9.0.2",
     "mochawesome": "^6.2.2",
+    "nyc": "11.4.1",
     "sinon": "^11.1.2"
   },
   "devDependencies": {
